# mag_edge_pool

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example.ipynb
mag_edge_pool/: mag_edge_pool.py
mag_edge_pool/src/: magnitude.py  make_splits.py  metric_choice.py  model.py
